Revision history for Verilog-Perl (aka Verilog::Language).

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!


* Verilog-Perl 3.471 devel

****  Add error on misused define (#1659). [Topa Tota]

****  Fix packages as enum base types, Verilator bug 2202. [Driss Hafdi]

****  Fix preprocessor stringify on undefined macro (#1668). [Martin Whitaker]


* Verilog-Perl 3.470 2020-01-06

****  Fix capital S for signed numbers, [Piotr Binkowski]

****  Fix // in filenames, #1610. [Peter Nelson]


* Verilog-Perl 3.468 2019-09-12

****  Support ${} for env vars in file lists, msg3065.

****  Fix multidimensional cell/interfaces, #1505. [Anderson Ignacio Da Silva]


* Verilog-Perl 3.466 2019-05-04

****  Fix Mac OS-X Perl 5.26.3 issues, #1428. [Jack Langsdorf]


* Verilog-Perl 3.464 2019-05-01

****  Fix vrename with escaped names, #1420. [Kerry Imming]


* Verilog-Perl 3.462 2019-04-09

***   Fix legacy $pin->netlist accessor.

***   Fix nettype declarations, msg2931.  [Andreas Sunardi]


* Verilog-Perl 3.460 2019-01-26

***   Fix Verilog::Std being empty on fork, #1394. [Corey Teffetalor]


* Verilog-Perl 3.458 2019-01-24

***   Add Verilog::Cell::range accessor, #1393. [Ed Carstens]

****  For write_verilog, print any cell parameters.


* Verilog-Perl 3.456 2018-10-28

****  Fix number parsing with newline after radix, #1340. [George Cuan]


* Verilog-Perl 3.454 2018-08-21

****  Support parsing around Cadence protected meta-comments.

****  Fix define argument stringification (`"), broke since 3.446. [Joe DErrico]

****  Fix to ignore Unicode UTF-8 BOM sequences, msg2576. [HyungKi Jeong]


* Verilog-Perl 3.452 2018-04-12

****  Fix parsing "output signed" in V2K port list, msg2540. [James Jung]

****  Fix GLIBC assertion failure, #1299. [Filipe Rosset]


* Verilog-Perl 3.450 2018-03-12

**    Support SystemVerilog 1800-2017.
