@@ -18,11 +18,16 @@
      <file>verilog/v_hier_subsub.v</file>
  </module_files>
  <input_files>
+  <file>verilog/v_hier_inc.vh</file>
   <file>verilog/v_hier_sub.v</file>
   <file>verilog/v_hier_subsub.v</file>
   <file>verilog/v_hier_top.v</file>
   <file>verilog/v_recursive.v</file>
  </input_files>
+ <includes>
+  <file>verilog/v_hier_top.v</file>
+    <inc>v_hier_inc.vh</inc>
+ </includes>
  <missing_modules>
   <module name="missing" />
  </missing_modules>
